@@ -1,3 +1,8 @@
+2010-01-06  Roland McGrath  <roland@redhat.com>
+
+	* relocate.c (relocate_getsym): For SHN_COMMON, zero st_value.
+	(relocate_section): Let unresolved SHN_COMMON symbol stay 0.
+
 2009-11-16  Roland McGrath  <roland@redhat.com>
 
 	* relocate.c (relocate_section): Skip SHT_NOBITS or empty target scn.
